--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -18,6 +18,12 @@ collections: # A list of collections the CMS should be able to edit
   - name: "pages"
     label: "Pages"
     create: true
+    fields: # The fields each document in this collection have
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Intro Blurb", name: "description", widget: "text"}
+      - {label: "Image", name: "image", widget: "image", required: false}
+      - {label: "Body", name: "body", widget: "markdown"}
     files:
       - file: "site/content/_index.md"
         label: "Home Page"
